upd group no longer updates academic_group. attempted fixing constraintes for group-related models
