# docs/swagger.json
@@ -1588,7 +1588,7 @@
                 }
             },
             "patch": {
-                "description": "Updates a group's name or academic group ID, restricted to the group admin.",
+                "description": "Updates a group's name, restricted to the group admin.",
                 "consumes": [
                     "application/json"
                 ],
@@ -3175,9 +3175,6 @@
         "dto.UpdateGroupRequest": {
             "type": "object",
             "properties": {
-                "academic_group_id": {
-                    "type": "integer"
-                },
                 "name": {
                     "type": "string"
                 }
